// -*- mode: text; -*-

This file is referred by some automatic release scripts.

[Release History (Japanese)]

<!-- BEGIN-LATEST-JP -->
<li>Polaris Engine 1.0.15-t 2024/4/15
  <ul>
    <li>GitHubからのクラウド自動リリースをテスト</li>
  </ul>
</li>
<!-- END-LATEST-JP -->
<li>Polaris Engine 1.0.14 2024/4/15
  <ul>
    <li>フォントファイルを修正</li>
  </ul>
</li>
<li>Polaris Engine 1.0.13 2024/4/15
  <ul>
    <li>コンフィグを修正</li>
  </ul>
</li>
<li>Polaris Engine 1.0.12 2024/4/14
  <ul>
    <li>日本語ノベルテンプレートのルビサイズを修正</li>
  </ul>
</li>
<li>Polaris Engine 1.0.11 2024/4/14
  <ul>
    <li>テンプレートのロゴを変更</li>
    <li>縦書きテンプレートにフォントライセンス画像を追加</li>
  </ul>
</li>
<li>Polaris Engine 1.0.10 2024/4/14
  <ul>
    <li>公式Visual Studio Code拡張の追加 (VScodeからPolaris Engine Extensionをインストール。既存ゲームでは新規テンプレ内の.vscodeフォルダをコピーで有効になります)</li>
  </ul>
</li>
<li>Polaris Engine 1.0.9 2024/4/14
  <ul>
    <li>コンフィグの改善</li>
  </ul>
</li>
<li>Polaris Engine 1.0.8 2024/4/14
  <ul>
    <li>Ubuntu PPA</li>
  </ul>
</li>
<li>Polaris Engine 1.0.6 2024/4/14
  <ul>
    <li>Mac版の公開</li>
  </ul>
</li>
<li>Polaris Engine 1.0.5 2024/4/14
  <ul>
    <li>変数名のコンフィグを修正</li>
  </ul>
</li>
<li>Polaris Engine 1.0.2 2024/4/13
  <ul>
    <li>変数名のバグを修正</li>
  </ul>
</li>
<li>Polaris Engine 1.0.1 2024/4/12
  <ul>
    <li>コンフィグの誤字を修正</li>
  </ul>
</li>
<li>Polaris Engine 1.0.0 2024/4/12
  <ul>
    <li>Polaris Engine 1.0.0</li>
    <li>Mac版は今回含まれていません。</li>
  </ul>
</li>

[Release History (English)]

<!-- BEGIN-LATEST-EN -->
<li>Polaris Engine 1.0.15 2024/4/15
  <ul>
    <li>GitHubからのクラウド自動リリースをテスト</li>
  </ul>
</li>
<!-- END-LATEST-EN -->
<li>Polaris Engine 1.0.14 2024/4/15
  <ul>
    <li>Fixed the font files</li>
  </ul>
</li>
<li>Polaris Engine 1.0.13 2024/4/15
  <ul>
    <li>Fixed the configs</li>
  </ul>
</li>
<li>Polaris Engine 1.0.12 2024/4/14
  <ul>
    <li>Fixed the ruby size of the Japanese Novel template</li>
  </ul>
</li>
<li>Polaris Engine 1.0.11 2024/4/14
  <ul>
    <li>Changed the logo</li>
  </ul>
</li>
<li>Polaris Engine 1.0.10 2024/4/14