@@ -2,10 +2,12 @@
 
 This file is referred by some automatic release scripts.
 
+testing.
+
 [Release History (Japanese)]
 
 <!-- BEGIN-LATEST-JP -->
-<li>Polaris Engine 1.0.15-t 2024/4/15
+<li>Polaris Engine 1.0.15 2024/4/15
   <ul>
     <li>GitHubからのクラウド自動リリースをテスト</li>
   </ul>
